# minerva

./: .clippy.toml  .gitignore  .prettierignore  .prettierrc  ARCHITECTURAL_DECISION.md  Dockerfile  EXTENDED_SESSION_SUMMARY.md  GPT_OSS_20B_128K_BENCHMARK_REPORT.md  LINT_REFACTORING_SPEC.md  MISTRAL_BENCHMARK_RESULTS.csv  PHASE6_STATUS.md  PHASE_1_COMPLETE.md  PHASE_1_VERIFICATION_REPORT.md  PHASE_2_PLAN.md  PHASE_3_5A_COMPLETION.md  PHASE_3_BASELINE_REPORT.md  PHASE_3_IMPLEMENTATION.md  PHASE_5_QUICK_START.md  PHASE_5_SESSION_SUMMARY.md  PHASE_9_ROADMAP.md  README.md  REAL_MODEL_TESTING_GUIDE.md  REFACTORING_RESULTS.md  RELEASE_NOTES.md  SAFETENSORS_PERFORMANCE_ANALYSIS.md  SCRIPTS.md  SESSION_FINAL_SUMMARY.md  SESSION_SUMMARY.md  SESSION_SUMMARY_OPENAI_API.md  download-test-models.sh  eslint.config.js  package.json  pnpm-lock.yaml  test_output.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: batch_processing_benchmarks.rs
src-tauri/src/: api_protocol.rs  commands.rs  config.rs  config_manager.rs  error.rs  error_recovery.rs  inference_api.rs  integration_tests.rs  lib.rs  main.rs  models.rs  server.rs  streaming.rs
src-tauri/src/api/: mod.rs  response.rs  types.rs  validator.rs
src-tauri/src/cli/: handler.rs  mod.rs  serve.rs  types.rs
src-tauri/src/commands/: model_commands.rs
src-tauri/src/config/: legacy.rs  loader.rs  mod.rs  types.rs  validator.rs
src-tauri/src/error_recovery/: handler.rs  mod.rs  tests.rs  types.rs
src-tauri/src/inference/: activation.rs  attention.rs  backend_manager.rs  backend_selector.rs  baseline_benchmarks.rs  batch.rs  batch_async.rs  batch_measurement.rs  batch_optimized.rs  batch_parallel.rs  batch_result_optimized.rs  benchmarks.rs  cache_optimizer.rs  causal_mask.rs  context_manager.rs  embedding.rs  engine_config.rs  feedforward.rs  garbage_collector.rs  gpu_batch_scheduler.rs  gpu_compute_engine.rs  gpu_context.rs  gpu_llama_integration.rs  greedy_sampling.rs  inference_backend_trait.rs  inference_engine.rs  inference_pipeline.rs  kv_cache.rs  kv_cache_optimizer.rs  layer_norm.rs  llama_adapter.rs  llama_attention.rs  llama_cpp_backend.rs  llama_decoder.rs  llama_engine.rs  llama_feedforward.rs  llama_inference.rs  llama_tokenizer.rs  llama_utils.rs  metal_gpu.rs  (+40 more)
src-tauri/src/logging/: mod.rs  spans.rs
src-tauri/src/middleware/: mod.rs  param_validator.rs  protocol.rs  rate_limiter.rs  token_bucket.rs  validator.rs
src-tauri/src/models/: binary_reader.rs  binary_reader_tests.rs  chat_types.rs  data_type_conversion.rs  gguf_data_type.rs  gguf_header.rs  gguf_header_validator.rs  gguf_kv_parser.rs  gguf_loader.rs  gguf_metadata_store.rs  gguf_parser.rs  gguf_reader.rs  gguf_tensor.rs  gguf_tensor_loader.rs  loader.rs  mod.rs  model_info.rs  model_registry.rs
src-tauri/src/observability/: component_info.rs  endpoints.rs  health.rs  health_types.rs  metrics.rs  metrics_analyzer.rs  metrics_calculator.rs  metrics_collector.rs  mod.rs  (+10 more)
src-tauri/tests/: integration_tests.rs  integration_tests.rs.tmp  lib.rs
(+282 files in other folders)
