[package]
name = "minerva"
version = "0.2.0"
description = "Local LLM server with OpenAI-compatible API"
authors = ["Cason Adams <casonadams@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "minerva_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "minerva"
path = "src/bin/minerva.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
gguf-rs-lib = "0.2"
walkdir = "2"
home = "0.5"
anyhow = "1"
llama_cpp = "0.3"
futures = "0.3"
parking_lot = "0.12"
num_cpus = "1.16"
libc = "0.2"
rayon = "1.7"
async-trait = "0.1"
dashmap = "5.5"
rand = "0.8"
safetensors = "0.4"
ndarray = "0.15"

[[bench]]
name = "batch_processing_benchmarks"
harness = false

